2008-05-25  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/Makefile.am:
	Fix parallel make
	bug #531014 - Rémi Cardona

2008-05-25  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* src/yelp-search-parser.c (check_finished), (snippet_response),
	(search_parser_process_idle):
	Add support for newer releases of Beagle
	bug #511244 - patch from Arun Raghavan

2008-05-23  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-search-parser.c (search_clean_snippet):
	Don't crash searching on multibyte characters
	bug #513668 - patch from Takao Fujiwara

2008-05-23  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* src/test-resolver.c (main):
	* src/test-uri.c (main):
	* src/yelp-base.c:
	* src/yelp-main.c (main):
	* src/yelp-search-pager.c:
	* src/yelp-search-parser.c:
	* src/yelp-toc-pager.c (process_omf_pending):
	* src/yelp-utils.c (resolve_process_ghelp), (resolve_full_file):
	* src/yelp-window.c (window_do_load_html), (window_print_page_cb):
	Port to use gio instead of gnome_vfs
	bug #513852 - patch from Alon Zakai

2008-05-23  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* m4/gecko.m4:
	* src/Makefile.am:
	* src/yelp-gecko-services.cpp:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-io-channel.c:
	* src/yelp-main.c (main):
	Add support for XULRunner / Firefox 3 backend
	Bug # 499744 - Patch from Christian Persch

=== 2.22.1 ===

2008-04-07  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 2.22.1

2008-04-07  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Don't launch external programs under GDM (#525447)

=== 2.22.0 ===

2008-03-09  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* NEWS:
	Version 2.22.0

2008-02-02  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-man.c:
	* src/yelp-transform.c:
	* src/yelp-toc.c:
	* src/yelp-info.c:
	* src/yelp-window.c:
	* src/yelp-docbook.c:
	* src/yelp-document.c:
	* src/yelp-document.h:
	Only propagate final signals
	once we have really finished